--- a/README
+++ b/README
@@ -1,3 +1,15 @@
 #Cheater repo
 
-#cheatsheets and manuals for everything I use
+Cheater Repo
+• “cheatsheets” folder – The main idea is to have one-line references of whatever
+• “manuals” folder – To store full manuals.
+• “notes” folder – notes on some book, page or whatever I’ve read or thought
+
+FAQ
+
+- Why do you use .sh extension for all your files?
+  because of the Textmate syntax highlighting :D
+
+
+TODO
+- Textile format
